--- a/src/Component/RecommendedRecipe/RecommendedRecipe.style.css
+++ b/src/Component/RecommendedRecipe/RecommendedRecipe.style.css
@@ -1,14 +1,14 @@
-.popular-recipe {
-  position: relative;
-  top: -50px;
-  margin-left: 100px;
+/* 추천 레시피 */
+.recommended-recipe-container {
+  position: relative; /* 절대 위치 대신 상대 위치 */
+  margin-top: 20px; /* SearchContainer와의 거리 */
 }
-.popular-recipe-container {
-  position: absolute;
-  display: flex;
+
+.recommended-recipe {
+  margin-left: 50px;
 }
 @media (max-width: 500px) {
-  .popular-recipe {
+  .recommended-recipe {
     margin-left: 50px;
     top: -170px;
   }
