--- a/src/Component/SearchContainer/SearchContainer.style.css
+++ b/src/Component/SearchContainer/SearchContainer.style.css
@@ -1,42 +1,40 @@
 .logo {
   display: flex; /* flexbox 레이아웃 적용 */
-  justify-content: center; /* 오른쪽 정렬 */
+  justify-content: flex-end; /* 오른쪽 정렬 */
   align-items: center; /* 세로 중앙 정렬 */
   flex-grow: 1; /* 부모의 남은 공간을 채움 */
   padding-top: 100px;
 }
-
+.logo-container {
+  display: flex;
+  justify-content: center; /* .logo-container의 콘텐츠를 중앙에 배치 */
+}
 .logo img {
   width: 150px; /* 원하는 크기로 조정 */
 }
-
-.input-container {
+.containers {
+  width: 100%;
+  height: 200px; /* 필요한 높이로 설정 */
+  padding: 20px 0; /* 적절한 패딩값 설정 */
+}
+.search-input-container {
   position: relative; /* 아이콘을 input 내부에 배치하기 위한 상대 위치 설정 */
   display: inline-block;
   padding: 0;
   margin: 0; /* input과 아이콘을 함께 배치 */
   padding-top: 100px; /* 상단 여백 설정 */
-  width: 100%; /* 전체 너비 사용 */
 }
 
 .input {
   box-sizing: border-box;
   background-color: #f4f4f4;
-  width: 100%; /* 너비를 100%로 설정 */
+  width: 70%; /* 너비를 100%로 설정 */
+  padding-left: 3%;
   height: 50px; /* 기본 높이 */
   border: none;
   margin: 0;
 
   border-radius: 5px;
-}
-
-.input-container img {
-  width: 30px; /* 아이콘 크기 */
-  position: absolute;
-  top: 85%; /* 중앙 정렬 */
-  left: 10px; /* input 왼쪽에서의 거리 설정 */
-  transform: translateY(-50%); /* 수직 중앙 맞추기 */
-  z-index: 1;
 }
 
 .bar-container {
@@ -46,29 +44,37 @@
   padding: 0;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 500px) {
+  /* .logo-container {
+    display: flex;
+    justify-content: center; /* 모바일에서 중앙 정렬 유지 */
+  /* align-items: center; */
+  /* } */
+  .logo {
+    display: flex;
+    justify-content: center; /* 이미지 중앙 정렬 */
+    align-items: center;
+    padding-top: 20px; /* 상단 여백 축소 */
+  }
+
   .logo img {
     width: 75px;
     margin: 5px;
   }
-  .bar-container,
-  .input-container,
-  .input {
+  .bar-container {
+    height: 150px;
+  }
+  .bar-container {
     width: 100%; /* 모든 관련 요소에 너비 100% 적용 */
   }
-  .input-container {
-    padding-top: 20px; /* 상단 여백 */
-    padding-left: 0;
-    padding-right: 0;
-    margin: 0; /* 여백 제거 */
-    position: absolute;
+  .search-input-container {
+    padding-top: 20px;
+    padding-left: 10%;
+    padding-right: 10%; /* 양쪽 여백 */
   }
+
   .input {
+    padding: 5%;
     height: 40px;
-    position: relative;
-    top: 10px;
-    left: 20px;
-    width: 390px;
-    box-sizing: border-box; /* 여백을 너비에 포함시킴 */
   }
 }
