--- a/src/Component/SearchContainer/SearchContainer.style.css
+++ b/src/Component/SearchContainer/SearchContainer.style.css
@@ -71,10 +71,12 @@
     padding-top: 20px;
     padding-left: 10%;
     padding-right: 10%; /* 양쪽 여백 */
+    width: 100%;
   }
 
   .input {
     padding: 5%;
+    width: 100%;
     height: 40px;
   }
 }
