--- a/src/Pages/Recipepage/add/RecipeAddpage.style.css
+++ b/src/Pages/Recipepage/add/RecipeAddpage.style.css
@@ -9,6 +9,10 @@
   display: flex;
   flex-direction: row;
 }
+.writeRecipe-orderContainer {
+  display: flex;
+  flex-direction: column;
+}
 .writeRecipe-ingredientContainer,
 .writeRecipe-seasoningContainer {
   display: flex;
@@ -21,15 +25,23 @@
   padding: 8px; /* 입력 필드 안쪽 여백 */
   border-bottom: 1px solid #8d8d8d; /* 테두리 스타일 */
 }
-
+.writeRecipe-orderDescription {
+  width: 45%; /* 입력 필드의 너비를 100%로 설정 (선택 사항) */
+  padding: 8px; /* 입력 필드 안쪽 여백 */
+  border-bottom: 1px solid #8d8d8d; /* 테두리 스타일 */
+}
 .writeRecipe-title,
 .writeRecipe-description,
 .writeRecipe-picture,
 .writeRecipe-ingrendient,
-.writeRecipe-seasoning {
+.writeRecipe-seasoning,
+.writeRecipe-orderTitle {
   margin-right: 30px;
   font-size: 20px;
   width: 150px; /* 레이블 너비를 동일하게 고정 */
+}
+.writeRecipe-orderTitle {
+  margin-bottom: 10px;
 }
 .writeRecipe-titleInputContainer,
 .writeRecipe-descriptionInputContainer,
@@ -54,7 +66,12 @@
   background-color: #f8f8f8;
   margin-bottom: 15px;
 }
-
+.writeRecipe-orderPictureBox {
+  width: 200px;
+  height: 180px;
+  background-color: #f8f8f8;
+  margin-bottom: 15px;
+}
 .writeRecipe-pictureIconContainer {
   width: 100%;
   height: 100%;
@@ -77,17 +94,22 @@
 .writeRecipe-pictureBox.dragging {
   background-color: #e6e6e6; /* 드래그 중일 때 배경색 변경 */
 }
+.writeRecipe-orderPictureBox.dragging {
+  background-color: #e6e6e6; /* 드래그 중일 때 배경색 변경 */
+}
 .writeRecipe-pictureInputContainer input {
   border: none;
 }
 .writeRecipe-addIngredientButtonContainer,
-.writeRecipe-addSeasoningButtonContainer {
+.writeRecipe-addSeasoningButtonContainer,
+.wrtieRecipe-addRrderButtonContainer {
   display: flex;
   justify-content: center;
   margin-top: 15px;
 }
 .writeRecipe-addIngredientButton,
-.writeRecipe-addSeasoninngButton {
+.writeRecipe-addSeasoninngButton,
+.writeRecipe-addOrderButton {
   width: 248px;
   height: 60px;
   background-color: white;
@@ -103,41 +125,77 @@
   font-weight: 500;
   text-align: center;
 }
+.writeRecipe-order {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.writeRecipe-orderDescription {
+  height: 180px;
+  width: 300px;
+  border: 1px solid #8d8d8d;
+}
+.writeRecipe-orderPictureIconContainer {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+  height: 180px;
+}
+.writeRecipe-orderPictureBoxFont {
+  text-align: center;
+  font-size: 13px;
+  margin-top: 10px;
+}
+.writeRecipe-orderDescription::placeholder {
+  position: absolute; /* 절대 위치 설정 */
+  top: 10px; /* 상단 위치 */
+  left: 5px; /* 왼쪽 위치 */
+  font-size: 12px;
+  /* 위쪽으로 이동 */
+}
+.writeRecipe-orderPictureInputContainer {
+  width: 200px;
+}
+.writeRecipe-orderPictureInputContainer input {
+  width: 200px;
+}
+.writeRecipe-order > *:not(:last-child) {
+  margin-right: 50px; /* 필요한 값으로 조정하세요 */
+}
+
 @media (max-width: 500px) {
   .writeRecipe-container {
     display: flex;
     flex-direction: column;
+    gap: 10px;
   }
   .writeRecipe-titleContainer,
   .writeRecipe-descriptionContainer,
   .writeRecipe-pictureContainer,
   .writeRecipe-ingredientContainer,
-  .writeRecipe-seasoningContainer {
+  .writeRecipe-seasoningContainer,
+  .writeRecipe-orderContainer {
     display: flex;
     flex-direction: column;
-    padding-left: 80px;
+    padding-left: 100px;
     padding-top: 40px;
   }
-  .writeRecipe-ingredientContainer,
-  .writeRecipe-seasoningContainer {
-    display: flex;
-    flex-direction: column;
-    padding-left: 40px;
-    padding-top: 40px;
-    padding-right: 40px;
-  }
+
   .writeRecipe-title,
   .writeRecipe-description,
   .writeRecipe-picture,
   .writeRecipe-ingrendient,
-  .writeRecipe-seasoning {
+  .writeRecipe-seasoning,
+  .writeRecipe-orderTitle {
     font-size: 1rem;
     margin-bottom: 10px;
     width: 100%;
   }
   .writeRecipe-pictureBox {
-    width: 80%;
-    height: 240px;
+    width: 200px;
+    height: 200px;
   }
   .writeRecipe-pictureInputContainer {
     margin-top: 20px;
@@ -170,12 +228,54 @@
     font-size: 14px; /* 폰트 크기 설정 */
   }
   .writeRecipe-addIngredientButtonContainer,
-  .writeRecipe-addSeasoningButtonContainer {
-    margin-top: -40px;
+  .writeRecipe-addSeasoningButtonContainer,
+  .wrtieRecipe-addRrderButtonContainer {
+    margin-top: 15px;
   }
   .writeRecipe-addIngredientButton,
-  .writeRecipe-addSeasoninngButton {
-    width: 120px;
-    height: 50px;
+  .writeRecipe-addSeasoninngButton,
+  .writeRecipe-addOrderButton {
+    width: 100px;
+    height: 40px;
+    font-size: 13px;
+  }
+  .writeRecipe-ingredientContainer,
+  .writeRecipe-seasoningContainer {
+    padding-left: 100px;
+  }
+  .writeRecipe-ingrendientInputContainer,
+  .writeRecipe-seasoningInputContainer {
+    display: flex;
+    flex-direction: row;
+  }
+  .writeRecipe-ingrendientInputContainer input,
+  .writeRecipe-seasoningInputContainer input {
+    width: 30%;
+  }
+  .writeRecipe-order {
+    display: flex;
+    justify-content: flex-start;
+  }
+  .writeRecipe-orderContainer {
+    padding-left: 100px;
+  }
+  .writeRecipe-orderDescription {
+    width: 50%;
+    height: auto;
+  }
+  .writeRecipe-orderPictureIconContainer,
+  .writeRecipe-orderPictureBox {
+    width: 100px;
+    height: 100px;
+  }
+  .writeRecipe-order {
+    margin-bottom: 15px;
+  }
+  .writeRecipe-orderPictureIcon {
+    width: 20px;
+    height: 20px;
+  }
+  .writeRecipe-order > *:not(:last-child) {
+    margin-right: 10px; /* 필요한 값으로 조정하세요 */
   }
 }
