--- a/src/Pages/Mypage/Mypage.style.css
+++ b/src/Pages/Mypage/Mypage.style.css
@@ -4,23 +4,19 @@
 .backIcon-container {
   margin-top: 100px;
 }
-input {
-  border: none;
-  border-bottom: 1px solid #666;
+.MyPage-container {
+  margin-top: 7%;
 }
-.input-container {
-  width: 600px;
-  height: auto;
+.MyPage-logo-container {
+  display: flex;
+  margin-top: 3%;
 }
-.login-button {
-  width: 300px;
-  background-color: #eaeaea;
-  height: 40px;
-  text-align: center;
-  line-height: 45px;
-  font-weight: 550;
-  border-radius: 5px;
-  color: rgb(71, 71, 71);
+.MyPage-logo-container div {
+  margin-right: 15px;
+}
+.MyPage-logo-container img {
+  display: flex;
+  width: 150px;
 }
 .logo-img img {
   width: 150px;
@@ -32,11 +28,22 @@ input {
   padding: 0;
   padding-left: 5px;
 }
+.login-font {
+  text-align: center;
+  margin: 30px;
+  font-size: 23px;
+}
 form::placeholder {
   font-size: 1.2rem; /* 원하는 크기로 설정 */
   color: #666; /* 원하는 색으로 설정 */
 }
 @media (max-width: 500px) {
+  .MyPage-logo-row {
+    margin-top: 10%;
+  }
+  .MyPage-container {
+    margin-top: 20%;
+  }
   .backIcon-container {
     margin-top: 200px;
   }
@@ -62,5 +69,22 @@ form::placeholder {
   }
   .logo-img2 {
     padding: 0;
+  }
+  .login-font {
+    color: #363636;
+    margin-top: 15%;
+    font-size: 20px;
+  }
+  /* .login-container {
+    margin-top: 15%;
+  } */
+  .login-signUp-font {
+    margin-top: 15px;
+  }
+  .MyPage-logo-container {
+    margin-top: 100px;
+  }
+  .MyPage-logo-container img {
+    width: 100px;
   }
 }
