--- a/src/Component/RecommendedRecipe/RecommendedRecipe.style.css
+++ b/src/Component/RecommendedRecipe/RecommendedRecipe.style.css
@@ -5,11 +5,13 @@
 }
 
 .recommended-recipe {
-  margin-left: 50px;
+  margin-left: 20%;
+  font-size: 20px;
 }
 @media (max-width: 500px) {
   .recommended-recipe {
     margin-left: 50px;
     top: -170px;
+    font-size: 17px;
   }
 }
