--- a/src/Pages/Homepage/Homepage.style.css
+++ b/src/Pages/Homepage/Homepage.style.css
@@ -3,3 +3,9 @@ body {
   width: 100%; /* 전체 너비 100% 설정 */
   overflow-x: hidden; /* 수평 스크롤 숨기기 */
 }
+.homepage-align {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* 세로 중앙 정렬 */
+  justify-content: center; /* 가로 중앙 정렬 */
+}
