--- a/src/Pages/Recipepage/add/RecipeAddpage.style.css
+++ b/src/Pages/Recipepage/add/RecipeAddpage.style.css
@@ -257,6 +257,7 @@
   .writeRecipe-ingrendientInputContainer input,
   .writeRecipe-seasoningInputContainer input {
     width: 30%;
+    border-radius: 0;
   }
   .writeRecipe-order {
     display: flex;
