--- a/src/Pages/Scrappage/Scrappage.style.css
+++ b/src/Pages/Scrappage/Scrappage.style.css
@@ -1,4 +1,11 @@
 .scrap-recipe-container {
-  margin-left: 50px;
+  margin-left: 20%;
+  font-size: 20px;
   margin-top: 20px;
+}
+@media (max-width: 500px) {
+  .scrap-recipe-container {
+    margin-left: 50px;
+    font-size: 17px;
+  }
 }
