--- a/src/Pages/Recipepage/add/RecipeAddpage.style.css
+++ b/src/Pages/Recipepage/add/RecipeAddpage.style.css
@@ -23,6 +23,7 @@
   margin: 10px; /* 아래쪽에 10px 간격 추가 */
   width: 45%; /* 입력 필드의 너비를 100%로 설정 (선택 사항) */
   padding: 8px; /* 입력 필드 안쪽 여백 */
+  border: none;
   border-bottom: 1px solid #8d8d8d; /* 테두리 스타일 */
 }
 .writeRecipe-orderDescription {
