--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "./assets/fonts/pretendard/pretendard.css";
 
 body {
   margin: 0;
